# BinaryIO

./: CMakeLists.txt  LICENSE  README.md  binary.natvis
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml
include/assetio/: binary_assert.hpp  binary_chunk.hpp  binary_stream.hpp  binary_stream_ext.hpp  byte_swap.hpp  rel_ptr.hpp
include/binaryio/: binary_assert.hpp  binary_chunk.hpp  binary_stream.hpp  binary_stream_ext.hpp  binary_types.hpp  rel_ptr.hpp
src/: binary_io.cpp
